views templates created

--- a/app/views/informations/new.html.haml
+++ b/app/views/informations/new.html.haml
@@ -114,7 +114,7 @@
             = f.radio_button :activity_inside, 1
             = f.label :activity_inside, "介助が必要", class: 'lifestyle__activity-inside__choices__selection-box2'
   .link-options  
-    = link_to root_path, method: :post, class: "link-options__submission-btn1" do
+    = link_to , method: :post, class: "link-options__submission-btn1" do
       登録する
   
     = link_to root_path, method: :get, class: "link-options__submission-btn2" do
