--- a/app/views/informations/show.index.haml
+++ b/app/views/informations/show.index.haml
@@ -3,7 +3,7 @@
     ＜登録されている情報です＞
     .registerd-informations__nomesesso
       .registerd-informations__nomesesso__nome
-        @user.username 性
+        @user.username 
       .registerd-informations__nomesesso__sesso
         @user.sex 性
     .registerd-informations__etaanno
